@@ -2,7 +2,11 @@
 envlist=py26,py27
 
 [testenv]
-deps=lockfile
-     mock
-     pexpect
-commands={envpython} ./setup.py test
+setenv=
+	RUN_CODE_TESTS=1
+deps=
+	lockfile
+     	mock
+     	pexpect
+commands=
+	{envpython} ./setup.py test
