@@ -1,6 +1,10 @@
 New in v0.7.01 (2014/11/??)
 ---------------------------
 Enhancements:
+* Undid move of testing/test_code.py.  Instead I fixed it
+  so that it would not run during PPA build.  It now needs
+  the setting RUN_CODE_TESTS=1 in the environment which is
+  supplied in the tox.ini file.
 * Moved testing/test_code.py to testing/manual/code_test.py
   so PPA builds would succeed.  Should be moved back later.
 * Remove valid_extension() check from file_naming.py.  It was
